updated initial home page design

--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -1,3 +1,10 @@
-.home-content-margin  {
-	background-color: #f7f7f7;
+.home-contents-overview {
+	background-color: #e0e0e0;
+	.home-content-margin {
+		background-color: #f7f7f7;
+	}
+	.home-content-detail {
+		background-color: #fff;
+	}
 }
+
