--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,13 @@
+@import './app.scss';
 @import './home/home.scss';
 @import './home/navigation.scss';
 @import './home/studio-slideshow.scss';
 @import './home/one-stop-shop.scss';
+@import './home/curated-product.scss';
+@import './home/work-area.scss';
+@import './home/blog.scss';
+@import './home/service-offered.scss';
+@import './home/design-process.scss';
+@import './home/testimonals.scss';
+@import './home/feature.scss';
+@import './home/contact-us.scss';
