--- a/src/css/home/feature.scss
+++ b/src/css/home/feature.scss
@@ -5,9 +5,9 @@
 }
 
 .feature-wrapper {
-	margin: 90px auto;
+	margin-top: 115px;
 	.feature-heading {
-		font-family: ProximaNova;
+		font-family: Proxima Nova;
 	    font-size: 36px;
 	    font-weight: bold;
 	    font-stretch: normal;
@@ -22,7 +22,7 @@
 	.feature-list {
 		.feature-image-caption {
 			p {	
-				font-family: ProximaNova;
+				font-family: Proxima Nova;
 				font-size: 17px;
 				font-weight: normal;
 				font-stretch: normal;
