--- a/src/css/home/one-stop-shop.scss
+++ b/src/css/home/one-stop-shop.scss
@@ -3,7 +3,7 @@
 	.one-stop-content {
 		border-bottom: 2px solid #f7f7f7;
 		> p{
-			font-family: ProximaNova;
+			font-family: Proxima Nova;
 			font-size: 17px;
 			font-weight: normal;
 			font-stretch: normal;
@@ -27,7 +27,7 @@
 			margin-top: 3em;
 			margin-bottom: 3em;
 			.meeting-detail-desc {
-				font-family: ProximaNova;
+				font-family: Proxima Nova;
 				font-size: 17px;
 				font-weight: bold;
 				font-stretch: normal;
