--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @import './fonts.scss';
 @import './app.scss';
 @import './home/home.scss';
-@import './home/navigation.scss';
+@import './navigation-bar/navigation.scss';
 @import './home/studio-slideshow.scss';
 @import './home/one-stop-shop.scss';
 @import './home/curated-product.scss';
