--- a/src/css/fonts.scss
+++ b/src/css/fonts.scss
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-  font-family: 'Proxima Nova Cn Rg';
+  font-family: 'Proxima Nova';
   src: url('./fonts/ProximaNovaCond-Regular.eot');
   src: local('Proxima Nova Condensed Regular'), local('ProximaNovaCond-Regular'),
     url('./fonts/ProximaNovaCond-Regular.eot?#iefix')
