--- a/src/css/home/contact-us.scss
+++ b/src/css/home/contact-us.scss
@@ -3,7 +3,8 @@
 	margin-left: 0;
 	.heading {
 		margin-top: 80px;
-		font-family: ProximaNova;
+		margin-bottom: 103px;
+		font-family: Proxima  Nova;
 		font-size: 36px;
 		font-weight: bold;
 		font-stretch: normal;
@@ -20,6 +21,38 @@
 			width: 72%;
     		height: 315px;
     		margin: 0 auto;
+		}
+	}
+
+	.contact-us-list {
+		margin-top: 69px;
+		text-align: center;
+		font-family: Proxima Nova;
+		font-size: 24px;
+		font-weight: normal;
+		font-stretch: normal;
+		font-style: normal;
+		line-height: normal;
+		letter-spacing: normal;
+		color: #000000;
+		
+		p{
+			border: 1px solid #fff;
+		    padding: 0.6em;
+		    width: 56%;
+		    margin: 0 auto;
+		    background-color: #fff;
+		    text-align: left;
+		}
+	}
+
+	.social-media-link {
+		width: 35%;
+    	margin: 0 auto;
+    	margin-top: 113px;
+    	margin-bottom: 73px;
+		img {
+			width:  34px;
 		}
 	}
 }
