added mouse pointer

--- a/src/css/home/studio-slideshow.scss
+++ b/src/css/home/studio-slideshow.scss
@@ -105,6 +105,17 @@
 			}
 		}
 	}
+
+	.mouse-pointer {
+		cursor: pointer;
+		position: absolute;
+	    top: 92%;
+	    z-index: 1;
+	    left: 50%;
+	    img {
+	    	width: 30.8%;
+	    }
+	}
 }
 
 
