--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,3 +12,5 @@
 @import './home/testimonals.scss';
 @import './home/feature.scss';
 @import './home/contact-us.scss';
+
+@import './blog/blog.scss';
