--- a/src/css/home/blog.scss
+++ b/src/css/home/blog.scss
@@ -9,7 +9,7 @@
 
 	.blog-desc {
 		p:first-child {
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 36px;
 			font-weight: bold;
 			font-stretch: normal;
@@ -23,7 +23,7 @@
 		margin-top: 113px;
 		.blog-list {
 			p {
-				font-family: Proxima Nova;
+				font-family: Proxima Nova Rg;
 			    font-size: 17px;
 			    font-weight: normal;
 			    font-stretch: normal;
@@ -38,6 +38,7 @@
 				font-size: 36px;
 				font-family: Proxima Nova Rg;
 				color: #080808;
+				font-weight: 600;
 			}
 		}
 	}
@@ -52,7 +53,7 @@
 		span {
 			display: inline-block;
     		margin-right: 8px;
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 17px;
 			font-weight: 600;
 			font-stretch: normal;
