--- a/src/css/home/feature.scss
+++ b/src/css/home/feature.scss
@@ -7,7 +7,7 @@
 .feature-wrapper {
 	margin-top: 115px;
 	.feature-heading {
-		font-family: Proxima Nova;
+		font-family: Proxima Nova Rg;
 	    font-size: 36px;
 	    font-weight: bold;
 	    font-stretch: normal;
@@ -22,7 +22,7 @@
 	.feature-list {
 		.feature-image-caption {
 			p {	
-				font-family: Proxima Nova;
+				font-family: Proxima Nova Rg;
 				font-size: 17px;
 				font-weight: normal;
 				font-stretch: normal;
