--- a/src/css/home/testimonals.scss
+++ b/src/css/home/testimonals.scss
@@ -7,7 +7,7 @@
 .testimonals-wrapper {
 	margin-top: 90px;
 	.testimonal-heading {
-		font-family: Proxima Nova;
+		font-family: Proxima Nova Rg;
 		font-size: 36px;
 		font-weight: bold;
 		font-stretch: normal;
@@ -19,7 +19,7 @@
 	}
 
 	p {
-		font-family: Proxima Nova;
+		font-family: Proxima Nova Rg;
 		font-stretch: normal;
 		font-style: normal;
 		line-height: normal;
