--- a/src/css/home/contact-us.scss
+++ b/src/css/home/contact-us.scss
@@ -27,7 +27,7 @@
 	.contact-us-list {
 		margin-top: 69px;
 		text-align: center;
-		font-family: Proxima Nova;
+		font-family: Proxima Nova Rg;
 		font-size: 24px;
 		font-weight: normal;
 		font-stretch: normal;
