--- a/src/css/home/curated-product.scss
+++ b/src/css/home/curated-product.scss
@@ -8,7 +8,7 @@
 	margin-top: 116px;
 	.curated-product-desc {
 		p {
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 17px;
 			font-weight: normal;
 			font-stretch: normal;
@@ -27,7 +27,7 @@
 
 	.curated-image-caption  {
 		text-align: center;
-		font-family: Proxima Nova;
+		font-family: Proxima Nova Rg;
 		font-size: 17px;
 		font-weight: 600;
 		font-stretch: normal;
@@ -52,7 +52,7 @@
 		span {
 			display: inline-block;
     		margin-right: 8px;
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 17px;
 			font-weight: 600;
 			font-stretch: normal;
