--- a/src/css/home/service-offered.scss
+++ b/src/css/home/service-offered.scss
@@ -8,7 +8,7 @@
 
 	.service-offered-desc {
 		p:first-child {
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 		  	font-size: 36px;
 		  	font-weight: bold;
 		  	font-stretch: normal;
@@ -21,7 +21,7 @@
 		p:nth-child(2) {
 			width: 35%;
     		margin: 0 auto;
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 17px;
 			font-weight: normal;
 			font-stretch: normal;
@@ -52,7 +52,7 @@
 		span {
 			display: inline-block;
     		margin-right: 8px;
-			font-family: Proxima Nova;
+			font-family: Proxima Nova Rg;
 			font-size: 17px;
 			font-weight: 600;
 			font-stretch: normal;
