--- a/src/css/home/studio-slideshow.scss
+++ b/src/css/home/studio-slideshow.scss
@@ -3,11 +3,14 @@
 	position: relative;
 	.studio-slides {
 		.slide-caption {
-			top: 35%;
+			background-image: url('../../images/home/slideshow/caption-background.png');
+			background-size: 100%;
+			background-repeat: no-repeat;
+			top: 25%;
 		    width: 32.16vw;
 		    left: 10.5%;
 			p {
-				 font-family: Proxima Nova Th;
+				 font-family: Proxima Nova Rg;
 				 font-size: 1.432vw;
 				 font-weight: normal;
 				 font-stretch: normal;
@@ -25,29 +28,57 @@
 			}
 
 			p:nth-child(2).cafe-slide-desc {
-				font-family: Proxima Nova;
+				font-family: Proxima Nova Rg;
 				font-weight: normal;
-				width: 21vw;
+				width: 24vw;
 			}
 
 			p:nth-child(2).custom-furniture-slide-desc {
-				font-family: Proxima Nova;
+				font-family: Proxima Nova Rg;
 				font-weight: normal;
-				width: 26vw;
+				width: 30.5vw;
 			}
 
 			p:nth-child(2).brand-strategy-slide-desc{
-				font-family: Proxima Nova;
+				font-family: Proxima Nova Rg;
 				font-weight: normal;
-				width: 26vw;
+				width: 27vw;
+			}
+
+			p:nth-child(3) {
+				font-family: Proxima Nova Rg;
+				font-size: 1.432vw;
+				font-weight: bold;
+				font-stretch: normal;
+				font-style: normal;
+				line-height: normal;
+				letter-spacing: normal;
+				color: #ed3232;
+				margin-top: 2.4em;
+				span {
+					margin-right: 8px;
+					img {
+						width: 1.041vw;
+					}
+
+					@media only screen and (min-width: 768px) {
+						img {
+							margin-bottom: 2px;
+						}
+					}
+
+					@media only screen and (min-width: 1200px) {
+						img {
+							margin-bottom: 4px;
+						}
+					}
+				}
 			}
 		}
 
 
 		.carousel-indicators {
 		    li {
-		    	width: 15px;
-		  		height: 15px;
 				border-radius: 100%;
 				background-color: #7c7c7c;
 		    }
@@ -55,27 +86,41 @@
 				background-color: #ea0000;
 			}
 		}
-
 		
 
 		@media only screen and (min-width: 768px) {
 			.carousel-indicators {
 				left: -71%;
-	    		bottom: 20%;
+	    		bottom: 11%;
+			}
+
+			li {
+				width: 10px;
+				height: 11px;
 			}
 		}
 
 		@media only screen and (min-width: 992px) {
 			.carousel-indicators {
-				left: -73%;
-	    		bottom: 23%;
+				left: -72%;
+	    		bottom: 13%;
+			}
+
+			li {
+				width: 11px;
+				height: 11px;
 			}
 		}
 
 		@media only screen and (min-width: 1200px) {
 			.carousel-indicators {
-				left: -75%;
-	    		bottom: 25%;
+				left: -74%;
+	    		bottom: 18%;
+
+	    		li {
+	    			width: 15px;
+		  			height: 15px;
+	    		}
 			}
 		}
 
@@ -84,11 +129,21 @@
 		}	
 	}
 
+	.item.next .carousel-caption {
+	    opacity: 0;
+	}
+
+	.carousel-caption {
+	  transition: opacity .25s ease-in-out;
+	  -moz-transition: opacity .25s ease-in-out;
+	  -webkit-transition: opacity .25s ease-in-out;
+	}
+
 	.furniture-design-slide	{
 		position: absolute;
-    	top: 58%;
+    	top: 45.8%;
     	left: 10.5%;
-    	font-family: Proxima Nova Cn Th;
+    	font-family: Proxima Nova Rg;
 		font-size: 1.432vw;
 		font-weight: bold;
 		font-stretch: normal;
@@ -97,25 +152,89 @@
 		letter-spacing: normal;
 		color: #ed3232;
 		margin-top: 2.4em;
-		z-index: 1;
+		z-index: 10;
 		span {
 			margin-right: 8px;
 			img {
-				width: 16px;
+				width: 1.041vw;
 			}
+
+			@media only screen and (min-width: 768px) {
+				img {
+					margin-bottom: 2px;
+				}
+			}
+
+			@media only screen and (min-width: 1200px) {
+				img {
+					margin-bottom: 4px;
+				}
+			}
+		}
+	}
+
+	@media only screen and (min-width: 768px) {
+		.furniture-design-slide {
+			top: 36.8%;
+		}
+	}
+
+	@media only screen and (min-width: 992px) {
+		.furniture-design-slide {
+			top: 42.8%;
+		}
+	}
+
+	@media only screen and (min-width: 1200px) {
+		.furniture-design-slide {
+			top: 45.8%;
 		}
 	}
 
 	.mouse-pointer {
 		cursor: pointer;
 		position: absolute;
-	    top: 92%;
+	    top: 82%;
 	    z-index: 1;
 	    left: 50%;
-	    img {
-	    	width: 30.8%;
-	    }
+	    
 	}
+
+	@media only screen and (min-width: 600px) {
+		.mouse-pointer {
+			img {
+				display: none;
+			}
+		}
+	}
+
+	@media only screen and (min-width: 768px) {
+		.mouse-pointer {
+			top: 69%;
+			img {
+				width: 18%;
+			}
+		}
+	}
+
+	@media only screen and (min-width: 992px) {
+		.mouse-pointer {
+			top: 76%;
+			img {
+		    	width: 21.8%;
+		    }
+		}
+	}
+
+	@media only screen and (min-width: 1200px) {
+		.mouse-pointer {
+			top: 80%;
+			img {
+		    	width: 30.8%;
+		    }
+		}
+	}
+
 }
 
 
