--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @import './fonts.scss';
 @import './app.scss';
 @import './home/home.scss';
-@import './navigation-bar/navigation.scss';
+
 @import './home/studio-slideshow.scss';
 @import './home/one-stop-shop.scss';
 @import './home/curated-product.scss';
@@ -14,3 +14,6 @@
 @import './home/contact-us.scss';
 
 @import './blog/blog.scss';
+
+@import './navigation-bar/navigation.scss';
+@import './navigation-bar/drawer.scss';
